--- a/CW1_7SENG999C/Storyboards/Savings.storyboard
+++ b/CW1_7SENG999C/Storyboards/Savings.storyboard
@@ -43,7 +43,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mev-pv-uvW">
-                                        <rect key="frame" x="0.0" y="130" width="393" height="579"/>
+                                        <rect key="frame" x="0.0" y="129.99999999999997" width="393" height="489.33333333333326"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Principal Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDU-Ei-ZhW">
                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="15"/>
@@ -164,27 +164,45 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9KN-XK-H3a">
-                                                <rect key="frame" x="0.0" y="455" width="393" height="124"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="filled" title="Calculate">
-                                                    <color key="baseBackgroundColor" red="0.1450980392" green="0.71764705880000002" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                </buttonConfiguration>
-                                            </button>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="CDv-3L-Wbv">
+                                                <rect key="frame" x="0.0" y="455" width="393" height="34.333333333333314"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G2K-Bp-FHK">
+                                                        <rect key="frame" x="0.0" y="0.0" width="191.66666666666666" height="34.333333333333336"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="filled" title="Calculate">
+                                                            <color key="baseBackgroundColor" red="0.1450980392" green="0.71764705880000002" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="calculateClick:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="K9g-Ps-QhK"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h0h-Fr-KV0">
+                                                        <rect key="frame" x="201.66666666666663" y="0.0" width="191.33333333333337" height="34.333333333333336"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="filled" title="Reset">
+                                                            <color key="baseBackgroundColor" systemColor="systemPinkColor"/>
+                                                        </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="resetClick:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="cIS-C5-ZKG"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="9KN-XK-H3a" secondAttribute="bottom" constant="15" id="0Co-Tp-qO3"/>
-                                            <constraint firstItem="9KN-XK-H3a" firstAttribute="leading" secondItem="mev-pv-uvW" secondAttribute="leading" constant="15" id="J2s-ln-Etp"/>
-                                            <constraint firstAttribute="trailing" secondItem="9KN-XK-H3a" secondAttribute="trailing" constant="15" id="SHY-kD-5GU"/>
-                                        </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u37-Qo-2BB">
-                                        <rect key="frame" x="0.0" y="719" width="393" height="50"/>
+                                        <rect key="frame" x="0.0" y="629.33333333333337" width="393" height="139.66666666666663"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="mev-pv-uvW" firstAttribute="top" secondItem="loI-e0-t4D" secondAttribute="bottom" constant="10" id="i8M-IS-Au7"/>
+                                    <constraint firstItem="loI-e0-t4D" firstAttribute="top" secondItem="BKH-ra-8oH" secondAttribute="top" id="9Zf-fj-4Jv"/>
+                                    <constraint firstAttribute="trailing" secondItem="mev-pv-uvW" secondAttribute="trailing" constant="10" id="Kal-0C-hbE"/>
+                                    <constraint firstItem="mev-pv-uvW" firstAttribute="leading" secondItem="BKH-ra-8oH" secondAttribute="leading" constant="10" id="WCK-YY-GRi"/>
+                                    <constraint firstAttribute="trailing" secondItem="loI-e0-t4D" secondAttribute="trailing" id="fCu-nF-f1s"/>
+                                    <constraint firstItem="mev-pv-uvW" firstAttribute="top" secondItem="loI-e0-t4D" secondAttribute="bottom" constant="10" id="kGP-Fe-STI"/>
+                                    <constraint firstItem="loI-e0-t4D" firstAttribute="leading" secondItem="BKH-ra-8oH" secondAttribute="leading" id="nBk-Y1-O4y"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -226,6 +244,9 @@
         </systemColor>
         <systemColor name="systemMintColor">
             <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
