--- a/CW1_7SENG999C/Storyboards/Base.lproj/Main.storyboard
+++ b/CW1_7SENG999C/Storyboards/Base.lproj/Main.storyboard
@@ -163,7 +163,7 @@
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="zIA-2d-abt" userLabel="Help Tap Gesture Recognizer">
                     <connections>
-                        <segue destination="CJt-Yx-nQw" kind="showDetail" id="nZy-X5-jo1"/>
+                        <segue destination="OUJ-ir-reu" kind="showDetail" id="768-ex-YGa"/>
                     </connections>
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="kx9-me-AB8">
@@ -174,6 +174,14 @@
             </objects>
             <point key="canvasLocation" x="916.74418604651157" y="3.8626609442060089"/>
         </scene>
+        <!--FAQ-->
+        <scene sceneID="SZA-4G-Gg1">
+            <objects>
+                <viewControllerPlaceholder storyboardName="FAQ" id="OUJ-ir-reu" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HL3-tX-UgN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1671" y="-162"/>
+        </scene>
         <!--TabView-->
         <scene sceneID="yKW-xl-x6Z">
             <objects>
@@ -183,16 +191,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qsf-8b-QwB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1607" y="5"/>
-        </scene>
-        <!--FAQ-->
-        <scene sceneID="7GC-L9-Iys">
-            <objects>
-                <viewControllerPlaceholder storyboardName="FAQ" id="CJt-Yx-nQw" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="FDj-ED-CWH"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TTE-vo-FyI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1450" y="-225"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="va4-oF-gDk">
@@ -218,7 +216,7 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="help" width="170.66667175292969" height="170.66667175292969"/>
-        <image name="history" width="24" height="24"/>
+        <image name="history" width="170.66667175292969" height="170.66667175292969"/>
         <image name="loan" width="128" height="128"/>
         <image name="mortgage" width="122.8795166015625" height="122.8795166015625"/>
         <image name="savings" width="170.66667175292969" height="170.66667175292969"/>
